[gd_scene load_steps=9 format=2]

[ext_resource path="res://example/StoryPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://editor/StoryGraphEdit.gd" type="Script" id=2]
[ext_resource path="res://editor/HelpButton.gd" type="Script" id=3]
[ext_resource path="res://editor/StoryEditor.gd" type="Script" id=4]
[ext_resource path="res://utility/StorySaveLoad.gd" type="Script" id=5]
[ext_resource path="res://editor/FileDialogPanel.gd" type="Script" id=6]
[ext_resource path="res://editor/GithubButton.gd" type="Script" id=7]
[ext_resource path="res://editor/node_template/NodeTemplates.tscn" type="PackedScene" id=8]

[node name="StoryEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 1280.0
margin_bottom = 20.0

[node name="NewButton" type="Button" parent="VBox/HBox"]
margin_right = 40.0
margin_bottom = 20.0
text = "New"

[node name="LoadButton" type="Button" parent="VBox/HBox"]
margin_left = 44.0
margin_right = 86.0
margin_bottom = 20.0
text = "Load"

[node name="SaveButton" type="Button" parent="VBox/HBox"]
margin_left = 90.0
margin_right = 131.0
margin_bottom = 20.0
text = "Save"

[node name="ExportButton" type="Button" parent="VBox/HBox"]
margin_left = 135.0
margin_right = 187.0
margin_bottom = 20.0
text = "Export"
__meta__ = {
"_editor_description_": ""
}

[node name="VSeparator" type="VSeparator" parent="VBox/HBox"]
margin_left = 191.0
margin_right = 195.0
margin_bottom = 20.0

[node name="AddNodeMenuButton" type="MenuButton" parent="VBox/HBox"]
margin_left = 199.0
margin_right = 274.0
margin_bottom = 20.0
text = "Add Node"
flat = false

[node name="NodeTemplatesButton" type="Button" parent="VBox/HBox"]
margin_left = 278.0
margin_right = 395.0
margin_bottom = 20.0
text = "Node Templates"

[node name="SaveNodeButton" type="Button" parent="VBox/HBox"]
margin_left = 399.0
margin_right = 478.0
margin_bottom = 20.0
text = "Save Node"

[node name="VSeparator2" type="VSeparator" parent="VBox/HBox"]
margin_left = 482.0
margin_right = 486.0
margin_bottom = 20.0

[node name="TestStoryButton" type="Button" parent="VBox/HBox"]
margin_left = 490.0
margin_right = 565.0
margin_bottom = 20.0
text = "Test story"

[node name="VSeparator3" type="VSeparator" parent="VBox/HBox"]
margin_left = 569.0
margin_right = 573.0
margin_bottom = 20.0

[node name="HelpButton" type="Button" parent="VBox/HBox"]
margin_left = 577.0
margin_right = 619.0
margin_bottom = 20.0
text = "Help"
script = ExtResource( 3 )
help_popup_path = NodePath("../../../HelpPopupPanel")

[node name="GithubButton" type="Button" parent="VBox/HBox"]
margin_left = 623.0
margin_right = 678.0
margin_bottom = 20.0
text = "Github"
script = ExtResource( 7 )

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 28.0

[node name="HBox2" type="HBoxContainer" parent="VBox"]
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StoryGraphEdit" type="GraphEdit" parent="VBox/HBox2"]
margin_right = 1114.0
margin_bottom = 688.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_offset = Vector2( -295, -20 )
script = ExtResource( 2 )

[node name="NodeTemplates" parent="VBox/HBox2" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1118.0
margin_right = 1280.0
margin_bottom = 688.0

[node name="AddNodePopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0

[node name="HelpPopupPanel" type="PopupPanel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -249.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HelpPopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
text = "Hotkeys:

Duplicate selected nodes:
Ctrl + D

Save selected node as template:
Ctrl + S

Load node template:
Ctrl + L"

[node name="FileDialogPanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.545098 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
graph_edit_path = NodePath("../VBox/HBox2/StoryGraphEdit")

[node name="FileDialogLoad" type="FileDialog" parent="FileDialogPanel"]
visible = true
margin_left = 667.391
margin_top = 331.879
margin_right = 982.391
margin_bottom = 463.379
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.tres ; Text Resource", "*.res ; Binary Resource" )
current_dir = "/repos/Godot/FuzzyStoryEditor"
current_path = "/repos/Godot/FuzzyStoryEditor/"

[node name="FileDialogSave" type="FileDialog" parent="FileDialogPanel"]
visible = true
margin_left = 640.452
margin_top = 489.023
margin_right = 996.452
margin_bottom = 620.523
rect_min_size = Vector2( 250, 87.5 )
window_title = "Save resource"
resizable = true
access = 2
filters = PoolStringArray( "*.tres ; Text Resource", "*.res ; Binary Resource" )
current_dir = "/repos/Godot/FuzzyStoryEditor"
current_path = "/repos/Godot/FuzzyStoryEditor/"

[node name="FileDialogExport" type="FileDialog" parent="FileDialogPanel"]
visible = true
margin_left = 635.065
margin_top = 180.122
margin_right = 991.065
margin_bottom = 311.622
rect_min_size = Vector2( 250, 87.5 )
window_title = "Export to Json"
resizable = true
access = 2
filters = PoolStringArray( "*.json ; Json" )
current_dir = "/repos/Godot/FuzzyStoryEditor"
current_path = "/repos/Godot/FuzzyStoryEditor/"

[node name="ConfirmationDialogLoad" type="ConfirmationDialog" parent="FileDialogPanel"]
visible = true
margin_left = 397.801
margin_top = 31.4289
margin_right = 697.801
margin_bottom = 131.429
rect_min_size = Vector2( 300, 100 )
window_title = "Are you sure you want to save?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialogNew" type="ConfirmationDialog" parent="FileDialogPanel"]
visible = true
margin_left = 708.498
margin_top = 51.1843
margin_right = 1018.5
margin_bottom = 151.184
rect_min_size = Vector2( 300, 100 )
window_title = "Are you sure you want to clear all nodes?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningDialog" type="AcceptDialog" parent="FileDialogPanel"]
visible = true
margin_left = 442.432
margin_top = 417.005
margin_right = 525.432
margin_bottom = 475.005
window_title = "Warning!"

[node name="StoryPlayer" parent="." instance=ExtResource( 1 )]
visible = false

[node name="StorySaveLoad" type="Node" parent="."]
script = ExtResource( 5 )
[connection signal="pressed" from="VBox/HBox/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="VBox/HBox/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBox/HBox/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBox/HBox/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="VBox/HBox/NodeTemplatesButton" to="." method="_on_NodeTemplatesButton_pressed"]
[connection signal="pressed" from="VBox/HBox/SaveNodeButton" to="." method="_on_SaveNodeButton_pressed"]
[connection signal="pressed" from="VBox/HBox/TestStoryButton" to="." method="_on_TestStoryButton_pressed"]
[connection signal="pressed" from="VBox/HBox/HelpButton" to="VBox/HBox/HelpButton" method="_on_HelpButton_pressed"]
[connection signal="pressed" from="VBox/HBox/GithubButton" to="VBox/HBox/GithubButton" method="_on_GithubButton_pressed"]
[connection signal="connection_request" from="VBox/HBox2/StoryGraphEdit" to="VBox/HBox2/StoryGraphEdit" method="_on_StoryGraphEdit_connection_request"]
[connection signal="connection_to_empty" from="VBox/HBox2/StoryGraphEdit" to="VBox/HBox2/StoryGraphEdit" method="_on_StoryGraphEdit_connection_to_empty"]
[connection signal="right_clicked" from="VBox/HBox2/StoryGraphEdit" to="." method="_on_StoryGraphEdit_right_clicked"]
[connection signal="save_node_template_request" from="VBox/HBox2/StoryGraphEdit" to="." method="_on_StoryGraphEdit_save_node_template_request"]
[connection signal="node_template_load_request" from="VBox/HBox2/NodeTemplates" to="." method="_on_NodeTemplates_node_template_load_request"]
[connection signal="id_pressed" from="AddNodePopupMenu" to="." method="_on_AddNodePopupMenu_id_pressed"]
[connection signal="export_request" from="FileDialogPanel" to="." method="_on_FileDialogPanel_export_request"]
[connection signal="load_request" from="FileDialogPanel" to="." method="_on_FileDialogPanel_load_request"]
[connection signal="new_request" from="FileDialogPanel" to="." method="_on_FileDialogPanel_new_request"]
[connection signal="save_request" from="FileDialogPanel" to="." method="_on_FileDialogPanel_save_request"]
[connection signal="file_selected" from="FileDialogPanel/FileDialogLoad" to="FileDialogPanel" method="_on_FileDialogLoad_file_selected"]
[connection signal="popup_hide" from="FileDialogPanel/FileDialogLoad" to="FileDialogPanel" method="_on_Dialog_popup_hide"]
[connection signal="file_selected" from="FileDialogPanel/FileDialogSave" to="FileDialogPanel" method="_on_FileDialogSave_file_selected"]
[connection signal="popup_hide" from="FileDialogPanel/FileDialogSave" to="FileDialogPanel" method="_on_Dialog_popup_hide"]
[connection signal="file_selected" from="FileDialogPanel/FileDialogExport" to="FileDialogPanel" method="_on_FileDialogExport_file_selected"]
[connection signal="popup_hide" from="FileDialogPanel/FileDialogExport" to="FileDialogPanel" method="_on_Dialog_popup_hide"]
[connection signal="confirmed" from="FileDialogPanel/ConfirmationDialogLoad" to="FileDialogPanel" method="_on_ConfirmationDialogLoad_confirmed"]
[connection signal="popup_hide" from="FileDialogPanel/ConfirmationDialogLoad" to="FileDialogPanel" method="_on_Dialog_popup_hide"]
[connection signal="confirmed" from="FileDialogPanel/ConfirmationDialogNew" to="FileDialogPanel" method="_on_ConfirmationDialogNew_confirmed"]
[connection signal="popup_hide" from="FileDialogPanel/ConfirmationDialogNew" to="FileDialogPanel" method="_on_Dialog_popup_hide"]
[connection signal="popup_hide" from="FileDialogPanel/WarningDialog" to="FileDialogPanel" method="_on_Dialog_popup_hide"]
